--- a/public/templates/posts/index.html
+++ b/public/templates/posts/index.html
@@ -1,3 +1,6 @@
+<script src="/js/angular/angular.js"></script>
+<script src="/js/angular-cookie/angular-cookie.js"></script>
+<script src="/js/ng-token-auth/dist/ng-token-auth.js"></script>
 <br/>
 <div class="row">
     <div class="col-md-12">
@@ -22,4 +25,5 @@
         </table>
     </div>
     <a href="#/posts/new">New Post</a>
+    <a href="#/users">Back to Users</a>
 </div>
