--- a/public/templates/users/index.html
+++ b/public/templates/users/index.html
@@ -27,3 +27,7 @@
     </div>
     <a href="#/posts">Posts list</a>
 </div>
+<div class="row">
+  <li ng-show="!user.id"><a ng-href="/sign_in">Sign in</a></li> 
+  <li ng-show="user.id"><a ng-click='signOut()'>Sign out</a></li>
+</div>
