--- a/public/templates/posts/index.html
+++ b/public/templates/posts/index.html
@@ -4,7 +4,7 @@
 <br/>
 <div class="row">
     <div class="col-md-12">
-        <a class="btn btn-primary" href="#/posts/new">Create a Post</a>
+        <a class="btn btn-primary" href="/posts/new">Create a Post</a>
         <h3 class="block">Posts</h3>
         <table class="table table-striped">
             <tr>
@@ -19,11 +19,11 @@
                 <td>{{post.name}}</td>
                 <td>{{post.body}}</td>
                 <td>
-                    <a href="#/posts/{{post.id}}/edit">Edit</a> | <a href="" ng-click="deletePost(post.id)">Remove</a>
+                    <a href="/posts/{{post.id}}/edit">Edit</a> | <a href="" ng-click="deletePost(post.id)">Remove</a>
                 </td>
             </tr>
         </table>
     </div>
-    <a href="#/posts/new">New Post</a>
-    <a href="#/users">Back to Users</a>
+    <a href="/posts/new">New Post</a>
+    <a href="/users">Back to Users</a>
 </div>
